# test_001

./: .ruff.toml  CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release-notes.yml
scripts/: test-001
test_001/: __init__.py  main.py
test_001.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_main.py
