[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-001"
version = "0.1.0"
description = "A minimal test program package"
requires-python = ">=3.11"

[project.scripts]
test-001 = "test_001.main:main"
test_001 = "test_001.main:main"
